# relinker

./: .gitignore  APPLYING_DOCS_PATCH.md  APPLYING_RELINKER_PATCH.md  APPLYING_RETRYFLOW_PATCH.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PATCH_MANIFEST.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  retry_budget.py
docs/: README.md  api-reference.md  async.md  common-patterns.md  conditions.md  context-manager.md  delays.md  design-principles.md  development.md  diagnostics.md  error-handling.md  events.md  examples.md  getting-started.md  http.md  index.md  installation.md  observability.md  policy-builder.md  policy.md  presets.md  production-checklist.md  quickstart.md  release.md  results.md  retry.md  roadmap.md  safety.md  state.md  statistics.md  stop.md  testing.md  try-again.md
docs/concepts/: exhaustion.md  results.md  retry-budgets.md  retry-lifecycle.md
docs/guides/: async.md  choosing-a-policy.md  common-mistakes.md  diagnostics.md  getting-started.md  http.md  installation.md  migrating-to-1.0.md  observability.md  policy-builder.md  production-checklist.md  testing.md  troubleshooting.md  when-not-to-retry.md
docs/maintainers/: 1.0-readiness.md  architecture.md  development.md  release.md  retry-budget-invariants.md  stability-matrix.md
docs/reference/: api.md  compatibility.md  delays.md  events.md  feature-map.md  presets.md
examples/: README.md  __init__.py  basic_retry.py  fake_services.py  retry_async.py  retry_context_manager.py  retry_database_like.py  retry_http_like.py  retry_http_retry_after.py  retry_policy_doctor.py  retry_polling.py  retry_preview_and_explain.py  retry_production_checklist.py  retry_result_to_json.py  retry_return_result.py  retry_structured_logging.py  retry_try_again.py  retry_with_diagnostics.py  retry_with_events.py  retry_with_fallback.py  retry_with_logging.py  retry_with_policy.py  retry_with_presets.py  retry_with_statistics.py  retry_without_sleep_in_tests.py
requirements/: build-backend.txt  build-tools.txt
scripts/: benchmark_retry_budget.py  benchmark_smoke.py  ci.sh  format.sh  lint.sh  validate_installed_wheel.py  validate_release_version.py
src/relinker/: __init__.py  attempt.py  budget.py  context.py  diagnostics.py  event.py  exceptions.py  http.py  policy.py  presets.py  result.py  result_conditions.py  retry.py  state.py  stats.py  typing.py
src/retryflow/: __init__.py  attempt.py  context.py  diagnostics.py  event.py  exceptions.py  http.py  policy.py  presets.py  result.py  retry.py  state.py  stats.py  typing.py
tests/: test_http_helpers.py  test_policy_guidance.py
tests/contracts/: README.md  __init__.py  _support.py  test_context_giveup_state_contract.py  test_event_contract.py  test_event_state_contract.py  test_exception_edge_cases_contract.py  test_exception_retry_contract.py  test_execution_parity_contract.py  test_exhaustion_contract.py  test_exhaustion_edge_cases_contract.py  test_history_contract.py  test_public_api_contract.py  test_result_conditions_contract.py  test_result_edge_cases_contract.py  test_result_representation_contract.py  test_result_retry_contract.py  test_retry_budget_contract.py
(+234 files in other folders)
