[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "relinker"
version = "1.2.0"
description = "Relinker — a clear, modular, and debuggable retry/resilience library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Relinker Contributors" }
]
keywords = ["retry", "backoff", "resilience", "async", "decorator"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.148",
  "ruff>=0.15.15",
  "mypy>=2.1.0",
  "twine>=5.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/igors93/relinker"
Repository = "https://github.com/igors93/relinker"
Documentation = "https://github.com/igors93/relinker/tree/main/docs"
Issues = "https://github.com/igors93/relinker/issues"
Changelog = "https://github.com/igors93/relinker/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/relinker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
